--- a/.github/workflows/DeployNode.yml
+++ b/.github/workflows/DeployNode.yml
@@ -1,4 +1,4 @@
-name: Version, Tag, Release & Package (packagejson)
+name: Version, Tag, Release & Package
 
 on:
   pull_request:
@@ -19,156 +19,119 @@ jobs:
       full_tag: ${{ steps.version.outputs.full_tag }}
       is_latest: ${{ steps.version.outputs.is_latest }}
     steps:
-      - name: Checkout du dépôt
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Récupérer la version actuelle depuis package.json
+      - name: Get current version from package.json
         id: get_version
         run: |
           VERSION=$(jq -r '.version' package.json)
           echo "CURRENT_VERSION=${VERSION}" >> $GITHUB_ENV
-          echo "Version actuelle: $VERSION"
 
-      - name: Incrémenter la version en fonction de la branche source de la PR
+      - name: Increment version based on source branch
         id: increment_version
         run: |
           CURRENT_VERSION=${{ env.CURRENT_VERSION }}
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
           TARGET_BRANCH="${{ github.base_ref }}"
           
-          echo "Branche source: $BRANCH_NAME"
-          echo "Branche cible: $TARGET_BRANCH"
-          
-          # Nettoyer la version existante (enlever les suffixes -pre-prod)
           CLEAN_VERSION=$(echo $CURRENT_VERSION | sed 's/-pre-prod//')
-          echo "Version nettoyée: $CLEAN_VERSION"
           
-          # Découper la version en MAJOR.MINOR.PATCH
           IFS='.' read -r MAJOR MINOR PATCH <<< "$CLEAN_VERSION"
-          echo "Version décomposée: MAJOR=$MAJOR, MINOR=$MINOR, PATCH=$PATCH"
           
-          # Incrémenter la version selon le type de branche source
           case $BRANCH_NAME in
             feat/*|feature/*)
               MINOR=$((MINOR + 1))
               PATCH=0
-              echo "🚀 Incrémentation mineure (feature)"
               ;;
             fix/*|hotfix/*)
               PATCH=$((PATCH + 1))
-              echo "🐛 Incrémentation patch (fix)"
               ;;
             *breaking*|*major*)
               MAJOR=$((MAJOR + 1))
               MINOR=0
               PATCH=0
-              echo "💥 Incrémentation majeure (breaking change)"
-              ;;
-            *)
-              echo "ℹ️ Pas d'incrémentation automatique"
               ;;
           esac
           
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
-          echo "Nouvelle version calculée: $NEW_VERSION"
           
-          # Ajouter le suffixe selon la branche cible
           if [[ "$TARGET_BRANCH" == "develop" ]]; then
             FULL_VERSION="${NEW_VERSION}-pre-prod"
             IS_LATEST="false"
-            echo "🧪 Version pre-prod: $FULL_VERSION"
           elif [[ "$TARGET_BRANCH" == "main" ]]; then
             FULL_VERSION="${NEW_VERSION}"
             IS_LATEST="true"
-            echo "✅ Version stable: $FULL_VERSION"
           fi
           
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "FULL_VERSION=$FULL_VERSION" >> $GITHUB_ENV
           echo "IS_LATEST=$IS_LATEST" >> $GITHUB_ENV
 
-      - name: Extraire le changelog depuis la description de la PR
+      - name: Extract changelog from PR description
         id: extract_changelog
         run: |
           PR_BODY='${{ github.event.pull_request.body }}'
           
-          # Extraire le contenu après #changelog
           if echo "$PR_BODY" | grep -q "#changelog"; then
             CHANGELOG=$(echo "$PR_BODY" | sed -n '/#changelog/,$p' | sed '1d' | sed '/^[[:space:]]*$/d')
           else
-            CHANGELOG="- Mise à jour vers la version ${{ env.FULL_VERSION }}"
+            CHANGELOG="- Update to version ${{ env.FULL_VERSION }}"
           fi
           
           if [ -z "$CHANGELOG" ]; then
-            CHANGELOG="- Mise à jour vers la version ${{ env.FULL_VERSION }}"
+            CHANGELOG="- Update to version ${{ env.FULL_VERSION }}"
           fi
           
-          echo "📝 Changelog extrait:"
-          echo "$CHANGELOG"
-          
-          # Sauvegarder le changelog dans les variables d'environnement
           {
             echo 'CHANGELOG<<EOF'
             echo "$CHANGELOG"
             echo 'EOF'
           } >> $GITHUB_ENV
 
-      - name: Mettre à jour la version dans package.json
+      - name: Update version in package.json
         id: version
         run: |
-          echo "📝 Mise à jour de package.json avec la version: ${{ env.FULL_VERSION }}"
           jq --arg version "${{ env.FULL_VERSION }}" '.version = $version' package.json > tmp.json && mv tmp.json package.json
-          
-          # Vérifier que la mise à jour a fonctionné
-          NEW_VERSION_CHECK=$(jq -r '.version' package.json)
-          echo "✅ package.json mis à jour. Version vérifiée: $NEW_VERSION_CHECK"
           
           echo "version=${{ env.NEW_VERSION }}" >> $GITHUB_OUTPUT
           echo "full_tag=${{ env.FULL_VERSION }}" >> $GITHUB_OUTPUT
           echo "is_latest=${{ env.IS_LATEST }}" >> $GITHUB_OUTPUT
 
-      - name: Commit and push the updated package.json
+      - name: Commit and push updated package.json
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
           git add package.json
-          git commit -m "🔖 Update version to ${{ env.FULL_VERSION }}"
+          git commit -m "Update version to ${{ env.FULL_VERSION }}"
           git push origin ${{ github.ref_name }}
 
-      - name: Supprimer l'ancien tag 'latest' si nécessaire
+      - name: Remove old latest tag
         if: env.IS_LATEST == 'true'
         run: |
-          echo "🗑️ Suppression de l'ancien tag 'latest'..."
-          # Supprimer le tag latest local et distant s'il existe
           if git tag -l | grep -q "^latest$"; then
             git tag -d latest || true
             git push origin :refs/tags/latest || true
-            echo "✅ Ancien tag 'latest' supprimé"
-          else
-            echo "ℹ️ Aucun tag 'latest' existant à supprimer"
           fi
 
-      - name: Créer les tags Git
+      - name: Create Git tags
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
-          echo "🏷️ Création du tag principal: ${{ env.FULL_VERSION }}"
           git tag ${{ env.FULL_VERSION }}
           git push origin ${{ env.FULL_VERSION }}
           
-          # Créer le tag latest si c'est une release principale
           if [[ "${{ env.IS_LATEST }}" == "true" ]]; then
-            echo "🏷️ Création du tag 'latest'"
             git tag latest
             git push origin latest
           fi
 
-      - name: Créer la GitHub Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.FULL_VERSION }}
@@ -185,27 +148,18 @@ jobs:
             ## 📦 Docker Package
             
             ```bash
-            # Pull par version spécifique
+            # Pull specific version
             docker pull ghcr.io/baptiste-ferrand/template-release:${{ env.FULL_VERSION }}
             ${{ env.IS_LATEST == 'true' && format('{0}# Pull latest stable{0}docker pull ghcr.io/baptiste-ferrand/template-release:latest', '
             ') || '' }}
             ```
             
-            ## 📦 NPM Package (si applicable)
+            ## ℹ️ Information
             
-            ```bash
-            # Installation par version spécifique
-            npm install your-package-name@${{ env.FULL_VERSION }}
-            ${{ env.IS_LATEST == 'true' && format('{0}# Installation latest stable{0}npm install your-package-name@latest', '
-            ') || '' }}
-            ```
-            
-            ## ℹ️ Informations
-            
-            - **Branche source**: `${{ github.event.pull_request.head.ref }}`
-            - **Branche cible**: `${{ github.base_ref }}`
-            - **Type de release**: ${{ env.IS_LATEST == 'true' && '**Stable** 🎯' || '**Pre-production** 🧪' }}
-            - **Auteur de la PR**: @${{ github.event.pull_request.user.login }}
+            - **Source branch**: `${{ github.event.pull_request.head.ref }}`
+            - **Target branch**: `${{ github.base_ref }}`
+            - **Release type**: ${{ env.IS_LATEST == 'true' && '**Stable** 🎯' || '**Pre-production** 🧪' }}
+            - **PR author**: @${{ github.event.pull_request.user.login }}
           prerelease: ${{ env.IS_LATEST != 'true' }}
           make_latest: ${{ env.IS_LATEST == 'true' }}
         env:
@@ -218,44 +172,33 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Checkout du dépôt
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref_name }}
 
-      - name: Vérifier les informations de build
-        run: |
-          echo "🔍 Informations de build:"
-          echo "- Version: ${{ needs.versioning-and-release.outputs.full_tag }}"
-          echo "- Est latest: ${{ needs.versioning-and-release.outputs.is_latest }}"
-          echo "- Branche: ${{ github.ref_name }}"
-
-      - name: Connexion à GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Activer Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Préparer les tags Docker
+      - name: Prepare Docker tags
         id: prepare_tags
         run: |
           TAGS="ghcr.io/baptiste-ferrand/template-release:${{ needs.versioning-and-release.outputs.full_tag }}"
           
           if [[ "${{ needs.versioning-and-release.outputs.is_latest }}" == "true" ]]; then
             TAGS="${TAGS},ghcr.io/baptiste-ferrand/template-release:latest"
-            echo "🏷️ Tags Docker: version + latest"
-          else
-            echo "🏷️ Tags Docker: version uniquement"
           fi
           
           echo "DOCKER_TAGS=${TAGS}" >> $GITHUB_ENV
-          echo "Tags préparés: ${TAGS}"
 
-      - name: Construire et pousser l'image Docker
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -263,24 +206,24 @@ jobs:
           platforms: linux/amd64,linux/arm64/v8
           tags: ${{ env.DOCKER_TAGS }}
           labels: |
-            org.opencontainers.image.title=Your Node.js Application
-            org.opencontainers.image.description=Node.js application with automated versioning
+            org.opencontainers.image.title=Template Release Application
+            org.opencontainers.image.description=Application with automated versioning
             org.opencontainers.image.version=${{ needs.versioning-and-release.outputs.full_tag }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
             org.opencontainers.image.source=${{ github.event.repository.clone_url }}
 
-      - name: Résumé du déploiement
+      - name: Deployment summary
         run: |
-          echo "## 🎉 Déploiement réussi!" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 Deployment successful!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📦 Package créé" >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 Package created" >> $GITHUB_STEP_SUMMARY
           echo "- **Version**: \`${{ needs.versioning-and-release.outputs.full_tag }}\`" >> $GITHUB_STEP_SUMMARY
           if [[ "${{ needs.versioning-and-release.outputs.is_latest }}" == "true" ]]; then
             echo "- **Latest**: \`latest\`" >> $GITHUB_STEP_SUMMARY
           fi
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 🐳 Commandes Docker" >> $GITHUB_STEP_SUMMARY
+          echo "### 🐳 Docker commands" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
           echo "docker pull ghcr.io/baptiste-ferrand/template-release:${{ needs.versioning-and-release.outputs.full_tag }}" >> $GITHUB_STEP_SUMMARY
           if [[ "${{ needs.versioning-and-release.outputs.is_latest }}" == "true" ]]; then
@@ -289,4 +232,4 @@ jobs:
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📋 package.json" >> $GITHUB_STEP_SUMMARY
-          echo "- La version dans package.json a été mise à jour automatiquement" >> $GITHUB_STEP_SUMMARY
+          echo "- Version in package.json updated automatically" >> $GITHUB_STEP_SUMMARY
